--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
   <body>
-    
+    <h1>Welcome to ZImperator's Site </h1>
+    <p>This is my site, which is hosted on Github. That's about it for now.</p>
+    <h3>Plans</h3>
+    <p>I plan to add the following:</p>
+    <p>- some basic games</p>
+    <p>- hackz, software, etc...</p>
   </body>
 </html>
