--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
   <body>
     <h1>Welcome to ZImperator's Site </h1>
     <p>This is my site, which is hosted on Github. That's about it for now.</p>
     <br>
     <h3>Plans</h3>
-    <p>I plan to add the following:</p>
-    <p>- some basic games</p>
-    <p>- hackz, software, etc...</p>
+    <pre>
+    I plan to add the following:
+      - some basic js games
+      - downloadable software that I have written (in multiple programming languages)
+    </pre>
   </body>
 </html>
