--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <style>
+      pre {
+        font: verdana
+        color: black
+      }
+    </style>
+  </head>
   <body>
     <h1>Welcome to ZImperator's Site </h1>
-    <p>This is my site, which is hosted on Github. That's about it for now.</p>
+    <pre>This is my site, which is hosted on Github. That's about it for now.</pre>
     <br>
     <h3>Plans</h3>
     <pre>
