--- a/index.html
+++ b/index.html
@@ -2,21 +2,19 @@
 <html lang="en">
   <head>
     <style>
-      pre {
-        font: verdana
+     p {
+       font: verdana
         color: black
-      }
-    </style>
+     }
+     </style>
   </head>
   <body>
     <h1>Welcome to ZImperator's Site </h1>
     <pre>This is my site, which is hosted on Github. That's about it for now.</pre>
     <br>
     <h3>Plans</h3>
-    <pre>
-    I plan to add the following:
-      - some basic js games
-      - downloadable software that I have written (in multiple programming languages)
-    </pre>
+    <p>I plan to add the following:</p
+     <p>some basic js games</p> - 
+     <p> - downloadable software that I have written (in multiple programming languages) </p>
   </body>
 </html>
