--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <h1>Welcome to ZImperator's Site </h1>
-    <pre>This is my site, which is hosted on Github. That's about it for now.</pre>
+    <p>This is my site, which is hosted on Github. That's about it for now.</p>
     <br>
     <h3>Plans</h3>
     <p>I plan to add the following:</p
-     <p>some basic js games</p> - 
+     <p> - some basic js games</p> 
      <p> - downloadable software that I have written (in multiple programming languages) </p>
   </body>
 </html>
