--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <style>
      p {
-       font-family: Arial
-       color: black
+       font-family: verdana
      }
      </style>
   </head>
