--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <style>
-     p {
-       font-family: verdana
-     }
-     </style>
+   <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Welcome to ZImperator's Site </h1>
