--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>This is my site, which is hosted on Github. That's about it for now.</p>
     <br>
     <h2>Plans</h2>
-    <p>I plan to add the following:</p
+    <p>I plan to add the following:</p>
      <p> - some basic js games </p> 
      <p> - downloadable software that I have written (in multiple programming languages) </p>
   </body>
