--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-   <link rel="stylesheet" href="styles.css" />
+   <meta charset="utf-8" />
+    <meta 
+      name="description"
+      contents="This is ZImperator's site, as you can see. 
+      You've probably had to go through HUNDREDS of Google pages to see this, 
+      so thanks for your perseverance to find this." />
+    <title>ZImperator's Site</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Welcome to ZImperator's Site </h1>
