--- a/software/index.html
+++ b/software/index.html
@@ -5,6 +5,7 @@
         <meta 
       name="description"
       contents="My COOL PROGRAMS!!!" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Software</title>
   </head>
   <body>
