--- a/software/index.html
+++ b/software/index.html
@@ -10,8 +10,6 @@
   </head>
   <body>
     <h1>Software</h1>
-    <p>This is the page for my software. Click any link to see my software for that programming language.</p>
-    <p>Python</p>
-    <p>C++</p>
+    <p>This is the page for my software. Click on any link to bring you to a download page with details on each program.</p>
   </body>
 </html>
