--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   </head>
   <body>
     <h1>Welcome to ZImperator's Site </h1>
-    <p>This is my site, which is hosted on Github. That's about it for now.</p>
+    <p>This is my site, which is hosted on Github.</p>
+    <br>
+    <h2>Links</h2>
+    <p>This is my <a href="blog/index.html">blog page</a>, which is named AoT, or Autism of Things.</p>
     <br>
     <h2>Plans</h2>
     <p>I plan to add the following:</p>
