--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <p>I plan to add the following:</p>
      <p> - some basic js games </p> 
      <p> - downloadable software that I have written (in multiple programming languages) </p>
+     <p>    - strangequark email worm (coming soon!) </p>
   </body>
 </html>
